src/assets/scss/Game.scss
// @import url("https://fonts.googleapis.com/css2?family=Lalezar&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@900&display=swap");

.game-wrapper {
  .game-body {
    .single-guess {
      display: flex;
      gap: 10px;
      align-items: center;
      justify-content: center;
      .letter {
        width: 40px;
        height: 40px;
        font-family: "Kanit";
        text-transform: uppercase;
        font-size: 36px;
        background: black;
        color: white;
        margin: 10px 0;
        display: flex;
        justify-content: center;
        align-items: center;
        &.contains {
          background: orangered !important;
          transform: rotate(360deg);
          transition: all 2s ease-in-out;
        }
        &.correct {
          transition: all 2s ease-in-out;
          transform: rotate(360deg);
          background: green !important;
        }
      }
    }
  }
  .game-actions {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    .upper-kb {
      text-transform: uppercase;
      .hg-button {
        &.hg-standardBtn {
          width: 40px;
          height: 40px;
        }
        &.hg-functionBtn {
          height: auto;
        }
      }
      .wrong {
        background-color: red;
      }
      .correct {
        background-color: green !important;
      }
      .contains {
        background-color: orangered;
      }
    }
  }
}

